unit test with mysqlcontainer and h2